--- a/LatetClient/pubspec.yaml
+++ b/LatetClient/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
     sdk: flutter
 
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -38,6 +39,7 @@ dependencies:
   async: ^2.8.2
   socket_io_client: ^1.0.2
   card_settings: ^3.0.1
+  intl: ^0.17.0
 
 
 dev_dependencies:
