--- a/LatetClient/pubspec.yaml
+++ b/LatetClient/pubspec.yaml
@@ -66,7 +66,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/images/
+     - lib/assets/images/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -85,16 +85,16 @@ flutter:
   fonts:
     - family: Fredoka-Regular
       fonts:
-        - asset: assets/fonts/Fredoka-Regular.ttf
+        - asset: lib/assets/fonts/Fredoka-Regular.ttf
     - family: Fredoka-Light
       fonts:
-        - asset: assets/fonts/Fredoka-Light.ttf
+        - asset: lib/assets/fonts/Fredoka-Light.ttf
     - family: OpenSans-Medium
       fonts:
-        - asset: assets/fonts/OpenSans-Medium.ttf
+        - asset: lib/assets/fonts/OpenSans-Medium.ttf
     - family: VarelaRound-Regular
       fonts:
-        - asset: assets/fonts/VarelaRound-Regular.ttf
+        - asset: lib/assets/fonts/VarelaRound-Regular.ttf
 
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
