--- a/LatetClient/pubspec.yaml
+++ b/LatetClient/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   socket_io_client: ^1.0.2
   card_settings: ^3.0.1
   intl: ^0.17.0
+  responsive_framework: ^0.2.0
 
 
 dev_dependencies:
